--- a/Vido.Parking.Ui.Wpf/MainWindow.xaml
+++ b/Vido.Parking.Ui.Wpf/MainWindow.xaml
@@ -3,12 +3,19 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:Views="clr-namespace:Vido.Parking.Ui.Wpf.Views"
   xmlns:ViewModels="clr-namespace:Vido.Parking.Ui.Wpf.ViewModels"
-  xmlns:metro="http://schemas.codeplex.com/elysium"
   x:Class="Vido.Parking.Ui.Wpf.MainWindow"
-  
   Title="MainWindow" Height="633" Width="961">
-  <Grid>
-    
-  </Grid>
 
+  <Window.DataContext>
+    <ViewModels:MainViewModel/>
+  </Window.DataContext>
+  <Window.Resources>
+    <DataTemplate DataType="{x:Type ViewModels:LaneViewModel}">
+      <Views:LaneView DataContext="{Binding}"/>
+    </DataTemplate>
+  </Window.Resources>
+
+  <Grid>
+    <ListView ItemsSource="{Binding Lanes}"/>
+  </Grid>
 </Window>
