--- a/Vido.Parking.Ui.Wpf/Views/LaneView.xaml
+++ b/Vido.Parking.Ui.Wpf/Views/LaneView.xaml
@@ -44,7 +44,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Text="Front Cam" TextAlignment="Center"/>
         <Border Grid.Row="1" Margin="5" BorderThickness="1" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
-          <Image Source="{Binding FrontImageCamera}" Stretch="Fill" MinWidth="160" MinHeight="120"/>
+          <Image Source="{Binding FrontImageCamera}" Stretch="Uniform" MinWidth="160" MinHeight="120"/>
         </Border>
       </Grid>
       <Grid Grid.Column="2" Grid.Row="1">
@@ -54,7 +54,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Text="Back Cam" TextAlignment="Center"/>
         <Border Grid.Row="1" Margin="5" BorderThickness="1" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
-          <Image Source="{Binding FrontImageCamera}" Stretch="Fill" MinWidth="160" MinHeight="120"/>
+          <Image Source="{Binding BackImageCamera}" MinWidth="160" MinHeight="120"/>
         </Border>
       </Grid>
 
@@ -64,7 +64,7 @@
           <ColumnDefinition Width="8*"/>
           <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Margin="5"/>
+        <TextBlock Grid.Column="0" Margin="5" Text="{Binding Message}"/>
         <Button Grid.Column="1" Margin="5" Content="Stop"
                 Command="{Binding StopCommand}"
                 CommandParameter="{Binding RelativeSource={RelativeSource Self}}"/>
@@ -78,7 +78,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Text="Front Image Saved" TextAlignment="Center"/>
         <Border Grid.Row="1" Margin="5" BorderThickness="1" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
-          <Image Source="{Binding FrontImageSaved}" Stretch="Fill" MinWidth="160" MinHeight="120"/>
+          <Image Source="{Binding FrontImageSaved}" Stretch="Uniform" MinWidth="160" MinHeight="120"/>
         </Border>
       </Grid>
       <Grid Grid.Column="2" Grid.Row="3">
@@ -88,7 +88,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Text="Back Image Saved" TextAlignment="Center"/>
         <Border Grid.Row="1" Margin="5" BorderThickness="1" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
-          <Image Source="{Binding BackImageSaved}" Stretch="Fill" MinWidth="160" MinHeight="120"/>
+          <Image Source="{Binding BackImageSaved}" Stretch="Uniform" MinWidth="160" MinHeight="120"/>
         </Border>
       </Grid>
     </Grid>
