--- a/Vido.Parking.Ui.Wpf/MainWindow.xaml
+++ b/Vido.Parking.Ui.Wpf/MainWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window
+﻿<Controls:MetroWindow
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:Views="clr-namespace:Vido.Parking.Ui.Wpf.Views"
   xmlns:ViewModels="clr-namespace:Vido.Parking.Ui.Wpf.ViewModels"
+  xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
   x:Class="Vido.Parking.Ui.Wpf.MainWindow" Loaded="Window_Loaded"
   Title="MainWindow" Height="633" Width="961">
   <Window.Resources>
@@ -20,4 +21,4 @@
       </ListBox.ItemsPanel>
     </ListBox>
   </Grid>
-</Window>
+</Controls:MetroWindow>
