--- a/Vido.Parking.Ui.Wpf/Views/LaneView.xaml
+++ b/Vido.Parking.Ui.Wpf/Views/LaneView.xaml
@@ -5,9 +5,9 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
   xmlns:Controls ="clr-namespace:Vido.Parking.Ui.Wpf.Controls"
-  mc:Ignorable="d" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" MinWidth="346" MinHeight="364">
+  mc:Ignorable="d" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
   <UserControl.Resources>
-    <BitmapImage x:Key='imageNotFound' UriSource='/Vido.Parking.Ui.Wpf;component/Images/imageNotFound.png' />
+    <BitmapImage x:Key='noImage' UriSource='/Vido.Parking.Ui.Wpf;component/Images/no-image.jpg' />
 
     <Style TargetType="Border">
       <Setter Property="BorderThickness" Value="1"/>
@@ -36,7 +36,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Margin="5" Text="{Binding FrontCamText}" TextAlignment="Center"/>
         <Border Grid.Row="1" Margin="5">
-          <Image Source="{Binding FrontImageCamera, TargetNullValue={StaticResource imageNotFound}}" MinWidth="160" MinHeight="120"/>
+          <Image Source="{Binding FrontImageCamera, TargetNullValue={StaticResource noImage}}" Stretch="Fill" MaxHeight="240" MaxWidth="320"/>
         </Border>
       </Grid>
       <Grid Grid.Column="2" Grid.Row="0">
@@ -46,7 +46,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Margin="5" Text="{Binding BackCamText}" TextAlignment="Center"/>
         <Border Grid.Row="1" Margin="5">
-          <Image Source="{Binding BackImageCamera, TargetNullValue={StaticResource imageNotFound}}" MinWidth="160" MinHeight="120"/>
+          <Image Source="{Binding BackImageCamera, TargetNullValue={StaticResource noImage}}" Stretch="Fill" MaxHeight="240" MaxWidth="320"/>
         </Border>
       </Grid>
 
@@ -58,7 +58,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Margin="5" Text="{Binding FrontImgText}" TextAlignment="Center"/>
         <Border Grid.Row="1" Margin="5">
-          <Image Source="{Binding FrontImageSaved, TargetNullValue={StaticResource imageNotFound}}" MinWidth="160" MinHeight="120">
+          <Image Source="{Binding FrontImageSaved, TargetNullValue={StaticResource noImage}}" Stretch="Fill" MaxHeight="240" MaxWidth="320">
           </Image>
         </Border>
       </Grid>
@@ -69,7 +69,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Margin="5" Text="{Binding BackImgText}" TextAlignment="Center"/>
         <Border Grid.Row="1" Margin="5">
-          <Image Source="{Binding BackImageSaved, TargetNullValue={StaticResource imageNotFound}}" MinWidth="160" MinHeight="120"/>
+          <Image Source="{Binding BackImageSaved, TargetNullValue={StaticResource noImage}}" Stretch="Fill" MaxHeight="240" MaxWidth="320"/>
         </Border>
       </Grid>
 
@@ -87,7 +87,7 @@
 
         <StackPanel Grid.Column="1">
           <TextBlock Text="{Binding UniqueIdText}" TextAlignment="Center"/>
-          <TextBox Margin="4,0,4,2" Text="{Binding UniqueId}"/>
+          <TextBox Margin="4,0,4,2" Text="{Binding UniqueId}" IsReadOnly="True"/>
         </StackPanel>
 
         <StackPanel Grid.Column="2">
@@ -104,7 +104,7 @@
         </Grid.ColumnDefinitions>
 
         <Border Margin="5">
-          <TextBlock Text="{Binding Message}" FontWeight="ExtraBlack" Foreground="Green" VerticalAlignment="Center"/>
+          <TextBlock Text="{Binding Message}" FontWeight="ExtraBlack" Foreground="Green" TextWrapping="Wrap"/>
         </Border>
         <Button Grid.Column="1" Margin="5" Content="Stop"
                 Command="{Binding StopCommand}"
